Fix and format